--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "auto-revision",
     "displayName": "auto-revision",
     "description": "Generate revisions, like magic.",
-    "version": "0.0.1",
-    "publisher": "auto-revision",
+    "version": "1.0.0",
+    "publisher": "Vincent-Zhao",
     "engines": {
         "vscode": "^1.19.0"
     },
